# web-scraper

./: README.md  pyproject.toml
app/: main.py
app/logic/: __init__.py  fetcher.py
app/logic/scraper/: scraper.py
app/schemes/: __init__.py  normalized_product.py
tests/: run.py
tests/schemes/: __init__.py  test_normalized_product.py
tests/scraper/: __init_.py  test_scraper.py
