[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["satsea <satsea@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.3"

[tool.poetry.scripts]
test = "tests.run:run"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
